--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,12 +1,9 @@
-<<<<<<< HEAD
-
-/** {
+* {
     margin: 0px;
     padding: 0px;
     font-family: aquaticoregular;
-    background-color: blue;
+    background-color: 9389C8;
 }
-*/
 
 body {
     background-color: #9389C8;
@@ -43,6 +40,7 @@ left:0px;
     margin: 3px 0px;
     background-color: #4A3D92;
 }
+
 .toggle-btn:hover {
 box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 -webkit-transition-duration: 0.4s; /* Safari */
@@ -73,97 +71,3 @@ transition-duration: 0.4s;
     -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
     font-family: aquaticoregular;
-=======
-.dusty {
-    color: #96858F
-}
-
-.lavendar {
-    color: #6D7993
-}
-
-.overcast {
-    color: #9099A2
-}
-
-.paper {
-    color: #D5D5D5
-}
-
-* {
-    margin: 0;
-    padding: 0;
-}
-
-svg {
-    xmlns: http://www.w3.org/2000/svg;
-}
-
-body {
-    margin: 0px;
-    padding: 0px;
-    background-color: #D5D5D5;
-}
-
-#titlebarContainer {
-    display: flex;
-    justify-content: flex-end;
-    height: 35px;
-    width: 100%;
-    background-color: #6D7993;
-    -webkit-app-region: drag;
-
-}
-
-/* Sizing of close/minimize svg */
-.minimize-svg, .close-svg{
-    width: 35px;
-    height: 35px;
-}
-
-/* One hover, change opacity of color of close/minimize icons */
-.minimize-svg-color, .close-svg-color{
-    fill-opacity: 0;
-    transition: fill-opacity 0.25s ease-out;
-}
-
-.minimize-svg:hover .minimize-svg-color, .close-svg:hover .close-svg-color {
-    fill-opacity: 1;
-    transition: fill-opacity 0.25s ease-out;
-}
-
-#minimize, #close {
--webkit-app-region: no-drag;
-}
-
-/* Extras */
-
-#extras {
-    height: 50px;
-    border: 3px solid blue;
-}
-
-/* Grid */
-
-#container {
-    display: grid;
-    margin-top: 25px;
-    /*position: absolute;*/
-    left: 0;
-    right: 0;
-    grid-template-columns: 6% 85% 6%;
-    grid-column-gap: 1.5%;
-    /*border: 3px solid blue;*/
-}
-
-#container>div {
-    background-color: #96858F;
-}
-
-#circles {
-    display: block;
-    width: 98%;
-    margin: 0 auto;
-    /*transform: translateX(50%);*/
->>>>>>> 379d5b310af4239cfb983aeb26e8031c6e70b254
-}
